Getting pyproject files in order

--- a/python/mqtt_client/pyproject.toml
+++ b/python/mqtt_client/pyproject.toml
@@ -1,17 +1,18 @@
-[project]
+[tool.poetry]
 name = "mqtt-client"
 version = "0.1.0"
 description = "Handles MQTT based communications"
-authors = [
-    {name = "Pieter-Jan Lyssens",email = "pjlys@duck.com"}
-]
+authors = ["Pieter-Jan Lyssens <pjlys@duck.com>"]
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "paho-mqtt (>=2.1.0,<3.0.0)"
+packages = [
+    { include = "mqtt_client" }
 ]
 
+[tool.poetry.dependencies]
+python = ">=3.11"
+paho-mqtt = ">=2.1.0,<3.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
