--- a/python/ai_agent/pyproject.toml
+++ b/python/ai_agent/pyproject.toml
@@ -1,15 +1,15 @@
-[project]
+[tool.poetry]
 name = "ai-agent"
 version = "0.1.0"
 description = "Distributed AI application"
-authors = [
-    {name = "Pieter-Jan Lyssens",email = "pjlys@duck.com"}
-]
+authors = ["Pieter-Jan Lyssens <pjlys@duck.com>"]
 readme = "README.md"
-requires-python = "<3.12"
-dependencies = [
+packages = [
+    { include = "ai_agent" }
 ]
 
+[tool.poetry.dependencies]
+python = ">=3.9,<3.12"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
