--- a/python/ai_agent/pyproject.toml
+++ b/python/ai_agent/pyproject.toml
@@ -9,7 +9,13 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
+python = ">=3.9,<3.10"
+tflite-runtime = "^2.14.0"
+matplotlib = "3.9"
+argparse = "^1.4.0"
+scipy = "1.12"
+tflite-support = "^0.4.4"
+sounddevice = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
